# SteamCRUD

./: .env  Cargo.toml  README.md  database.sql
src/: main.rs
src/crud/: product.rs
src/crud/product/: create.rs  delete.rs  get.rs  update.rs
src/models/: mod.rs  product.rs  steamaccount.rs  transaction.rs
src/services/product/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
